# tesql

./: README.md
tesql/: .gitignore  Cargo.toml
tesql-cli/: .gitignore  Cargo.toml
tesql-cli/src/: error.rs  main.rs
tesql-cli/testdata/: data.json
tesql/src/: json.rs  lib.rs  mapper.rs  sqlizer.rs
tesql/src/data/: parser.rs  types.rs
tesql/tests/: gen-inserts-test.rs
